--- a/package.json
+++ b/package.json
@@ -22,6 +22,12 @@
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
     "bootstrap": "^4.6.0",
+    "cor": "0.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "localdate": "^3.0.2",
+    "morgan": "^1.10.0",
+    "promise-mysql": "^5.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
@@ -30,6 +36,7 @@
     "@angular-devkit/build-angular": "~0.1102.10",
     "@angular/cli": "~11.2.10",
     "@angular/compiler-cli": "~11.2.11",
+    "@types/express": "^4.17.13",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
